--- a/css/Leon.css
+++ b/css/Leon.css
@@ -368,9 +368,167 @@
   background-color: #FFFFFF;
 }
 
+/* END OF PORTFOLIO */
+
+/* START OF ABOUT */
+
+.about-grid {
+  display: grid;
+  grid-template-areas:
+  "photo highlighted highlighted"
+  "photo normal normal";
+  justify-content: space-between;
+  gap: 40px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+/* GRID AREAS */ 
+
+.about-photo {
+  grid-area: photo;
+}
+
+.highlighted-paragraph {
+  grid-area: highlighted;
+}
+
+.normal-paragraph {
+  grid-area: normal;
+}
+
+/* END OF GRID AREAS */
+
+/* GRID STYLING */
+
+.about-photo {
+  position: relative;
+  width: 250px;
+  height: 375px;
+}
+.about-photo::before {
+  content: '';
+  background-color:#EBEDEC;
+  width: 100px;
+  height: calc(100% + 80px);
+  position: absolute;
+  left: -50px;
+  top: -40px;
+  z-index: -1;
+}
+
+.about-photo img {
+  width: 260px;
+  position: relative;
+ 
+}
+
+.about-photo::after {
+  content: '';
+  width: 120px;
+  height: 300px;
+  border-left: solid 80px #10cab7;
+  border-bottom: solid 80px #10cab7;
+  top: -40px;
+  left: 220px;
+  position: absolute;
+  z-index: -1;
+}
 
 
 
-  
+.highlighted-paragraph {
+  font-weight: 800;
+  font-size: 16px;
+  max-width: 700px;
+  padding-left: 150px;
+  line-height: 2;
+  position: relative;
+}
+
+.highlighted-paragraph::after {
+  content: "";
+  width: 400px;
+  height: 2px; 
+  background-color: #10CAB7;
+  position: absolute;
+  bottom: -20px;
+  left: 150px;
+}
+
+.normal-paragraph {
+  font-weight: 300;
+  font-size: 16px;
+  max-width: 700px;
+  padding-left: 150px;
+  line-height: 2;
+}
+
+/* END OF ABOUT */
+
+/* START OF CONTACT */
+
+.contact {
+  background-color: #F6F6F6;
+}
+
+.contact-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.navy-h1 {
+  display: flex;
+  justify-content: center;
+  color: #2C4755;
+  font-size: 36px;
+  font-weight: 800;
+  letter-spacing: -2px;
+  margin-bottom: -10px;
+  margin-top: 100px;
+}
+
+.mail {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: #10CAB7;
+  font: 36px;
+  font-weight: 800;
+  padding-bottom: 20px;
+}
+
+.networks {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 80px;
+  margin: 0 auto;
+}
+
+.social-icon {
+  margin-left: 10px;
+  color: #2C4755;
+}
+
+/* END OF CONTACT */
+
+.footer {
+  background-color: #2C4755;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  height: 80px;
+  margin-top: 0;
+  font-size: 20px;
+  color:white;
+}
+
+.Leon-color {
+  margin: 0 5px;
+  color: #10CAB7;
+}
 
 
